# QxpClient

./: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
public/: runtime-config.js
scripts/: sync-runtime-config.mjs
src/: App.vue  env.d.ts  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/calls/: WebRtcCallManager.ts  callSounds.ts  callTypes.ts
src/components/: AudioPlayer.vue  CallPanel.vue  ComposerBar.vue  ImageViewer.vue  MemberSidebar.vue  MessageBubble.vue  MessageList.vue  MessengerSidebar.vue  OnboardingScreen.vue  ProfileCard.vue  SettingsModal.vue  ThreadHeader.vue
src/composables/: useI18n.ts  useMessenger.ts
src/config/: runtime.ts
src/i18n/: en.json  es.json  fr.json  ru.json
src/views/: InboxView.vue
