[package]
name = "qxp-tauri"
version = "0.1.0"
description = "QxProtocol mobile shell"
authors = ["QxProtocol"]
edition = "2021"
license = "MIT"

[lib]
name = "qxp_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "qxp-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-notification = "2.3.1"
tauri-plugin-opener = "2.5.3"
